--- a/IIS/IIS.Web/appsettings.json
+++ b/IIS/IIS.Web/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "db": "Server=db-02.contour.net;Database=contour_dev;Username=vivanenko;Password=123qwe;"
+  }
 }
