--- a/IIS/IIS.Web/IIS.Web.csproj
+++ b/IIS/IIS.Web/IIS.Web.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="GraphQL" Version="2.4.0" />
+    <PackageReference Include="GraphiQL" Version="1.2.0" />
   </ItemGroup>
 
   <ItemGroup>
