feat(openSchema): implement open schema
Add resolvers, relation field support, non-null support, lists

Relates to IIS-3439

--- a/IIS/IIS.Web/appsettings.json
+++ b/IIS/IIS.Web/appsettings.json
@@ -6,6 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "db": "Server=db-02.contour.net;Database=contour_dev;Username=vivanenko;Password=123qwe;"
+    "db": "Server=db;Database=postgres;Username=postgres;Password=;",
+    "remote_db": "Server=db-02.contour.net;Database=contour_dev;Username=contour_api;Password=V88pC47s45;"
   }
 }
