feat(openSchema): add abstraction between EF and GraphQL
add resolvers
add dataloader
refactor code

Relates to IIS-3521

--- a/IIS/IIS/IIS.csproj
+++ b/IIS/IIS/IIS.csproj
@@ -23,5 +23,6 @@
     <Folder Include="GraphQL.OSchema\" />
     <Folder Include="OSchema.EntityFramework\" />
     <Folder Include="OSchema.EntityFramework\Resolvers\" />
+    <Folder Include="OSchema\Resolving\" />
   </ItemGroup>
 </Project>
