--- a/IIS/IIS/IIS.csproj
+++ b/IIS/IIS/IIS.csproj
@@ -15,14 +15,17 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.4" />
     <PackageReference Include="GraphQL" Version="2.4.0" />
-    <PackageReference Include="NEST" Version="6.6.0" />
+    <PackageReference Include="NEST" Version="7.0.0-alpha2" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="OSchema\" />
     <Folder Include="GraphQL\" />
     <Folder Include="GraphQL.OSchema\" />
     <Folder Include="OSchema.EntityFramework\" />
-    <Folder Include="OSchema.EntityFramework\Resolvers\" />
     <Folder Include="OSchema\Resolving\" />
+    <Folder Include="Search\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove=".DS_Store" />
   </ItemGroup>
 </Project>
