--- a/IIS/docker-compose.yml
+++ b/IIS/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       dockerfile: IIS.Web/Dockerfile
     depends_on:
         - db
+        - es
     ports:
         - 5000:80
       
@@ -19,9 +20,11 @@ services:
         - ../data_storage/postgres-data:/var/lib/postgresql/data
         
   es:
-    image: elasticsearch:6.6.1
+    image: elasticsearch:7.0.1
     environment:
       - discovery.type=single-node
+    volumes:
+      - ../data_storage/elasticsearch-data:/usr/share/elasticsearch/data
     ports:
       - 9200:9200
     restart: always
