--- a/IIS/IIS.Web/IIS.Web.csproj
+++ b/IIS/IIS.Web/IIS.Web.csproj
@@ -15,6 +15,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\IIS\IIS.csproj" />
+    <ProjectReference Include="..\IIS.Replication\IIS.Replication.csproj" />
+    <ProjectReference Include="..\IIS.Ontology\IIS.Ontology.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
