--- a/IIS/IIS.Introspection/IIS.Introspection.csproj
+++ b/IIS/IIS.Introspection/IIS.Introspection.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\IIS.Core\IIS.Core.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="RabbitMQ.Client" Version="5.1.0" />
+  </ItemGroup>
 </Project>
