--- a/IIS/docker-compose.yml
+++ b/IIS/docker-compose.yml
@@ -1,30 +1,48 @@
 version: '3.4'
 
 services:
-  iis.web:
-    image: ${DOCKER_REGISTRY-}iis
-    build:
-      context: .
-      dockerfile: IIS.Web/Dockerfile
-    depends_on:
-        - db
-        - es
-    ports:
-        - 5000:80
-      
-  db:
-    image: postgres:latest
-    ports:
-        - 5432:5432
-    volumes:
-        - ../data_storage/postgres-data:/var/lib/postgresql/data
-        
-  es:
-    image: elasticsearch:7.0.1
-    environment:
-      - discovery.type=single-node
-    volumes:
-      - ../data_storage/elasticsearch-data:/usr/share/elasticsearch/data
-    ports:
-      - 9200:9200
-    restart: always
+    iis.web:
+        build:
+            context: .
+            dockerfile: IIS.Web/Dockerfile
+        depends_on:
+            - db
+            - mq
+            - es
+        ports:
+            - 5000:80
+        restart: always
+    
+    iis.replication:
+        build:
+            context: .
+            dockerfile: IIS.Replication/Dockerfile
+        depends_on:
+            - mq
+        ports:
+            - 5500:80
+        restart: always
+    
+    db:
+        image: postgres:latest
+        ports:
+            - 5432:5432
+        volumes:
+            - ../data_storage/postgres-data:/var/lib/postgresql/data
+        restart: always
+  
+    mq:
+        image: rabbitmq:latest
+        volumes:
+            - ../data_storage/rabbitmq-data:/var/lib/rabbitmq
+        restart: always
+
+    es:
+        image: elasticsearch:7.0.1
+        environment:
+            - discovery.type=single-node
+        volumes:
+            - ../data_storage/elasticsearch-data:/usr/share/elasticsearch/data
+        ports:
+            - 9200:9200
+        restart: always
