feat(replication): replicate data from mq to es
reorganize services
tune index mapping

Relates to IIS-3152

--- a/IIS/IIS.Replication/appsettings.Development.json
+++ b/IIS/IIS.Replication/appsettings.Development.json
@@ -5,5 +5,18 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  //"mq": {
+  //  "host": "mq",
+  //  "username": "guest",
+  //  "password": "guest"
+  //},
+  "mq": {
+    "host": "rmk-01.contour.net",
+    "username": "manager",
+    "password": "manager"
+  },
+  "es": {
+    "host": "http://es:9200"
   }
 }
