--- a/IIS/IIS.Replication/appsettings.json
+++ b/IIS/IIS.Replication/appsettings.json
@@ -4,5 +4,13 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "mq": {
+    "host": "rmk-01.contour.net",
+    "username": "manager",
+    "password": "manager"
+  },
+  "es": {
+    "host": "http://es:9200"
+  }
 }
