--- a/IIS/IIS.Search/IIS.Search.csproj
+++ b/IIS/IIS.Search/IIS.Search.csproj
@@ -4,4 +4,14 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\IIS.Core\IIS.Core.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="GraphQL" Version="2.4.0" />
+    <PackageReference Include="NEST" Version="7.0.0-alpha2" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resolving\" />
+  </ItemGroup>
 </Project>
