feat(search): tune es index mapping
add profiles

Relates to IIS-3152

--- a/IIS/IIS.Replication/appsettings.Staging.json
+++ b/IIS/IIS.Replication/appsettings.Staging.json
@@ -7,11 +7,11 @@
     }
   },
   "mq": {
-    "host": "mq",
-    "username": "guest",
-    "password": "guest"
+    "host": "rmk-01.contour.net",
+    "username": "manager",
+    "password": "manager"
   },
   "es": {
-    "host": "http://es:9200"
+    "host": "http://localhost:9200"
   }
 }
