--- a/IIS/IIS.Replication/appsettings.json
+++ b/IIS/IIS.Replication/appsettings.json
@@ -4,13 +4,5 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "mq": {
-    "host": "rmk-01.contour.net",
-    "username": "manager",
-    "password": "manager"
-  },
-  "es": {
-    "host": "http://es:9200"
-  }
+  "AllowedHosts": "*"
 }
