--- a/IIS/IIS.Web/appsettings.Development.json
+++ b/IIS/IIS.Web/appsettings.Development.json
@@ -5,5 +5,16 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "db": "Server=db;Database=postgres;Username=postgres;Password=;"
+  },
+  "mq": {
+    "host": "mq",
+    "username": "guest",
+    "password": "guest"
+  },
+  "es": {
+    "host": "http://es:9200"
   }
 }
