--- a/IIS/IIS.Web/appsettings.json
+++ b/IIS/IIS.Web/appsettings.json
@@ -4,10 +4,5 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "db": "Server=db;Database=postgres;Username=postgres;Password=;",
-    "remote_db": "Server=db-02.contour.net;Database=contour_dev;Username=contour_api;Password=V88pC47s45;",
-    "es": "http://es:9200"
-  }
+  "AllowedHosts": "*"
 }
