--- a/IIS/IIS.Replication/appsettings.Staging.json
+++ b/IIS/IIS.Replication/appsettings.Staging.json
@@ -12,6 +12,6 @@
     "password": "manager"
   },
   "es": {
-    "host": "http://localhost:9200"
+    "host": "http://ref-es-01.contour.net:9200"
   }
 }
