--- a/IIS/IIS.Web/appsettings.Staging.json
+++ b/IIS/IIS.Web/appsettings.Staging.json
@@ -14,6 +14,6 @@
     "password": "manager"
   },
   "es": {
-    "host": "http://localhost:9200"
+    "host": "http://ref-es-01.contour.net:9200"
   }
 }
