--- a/IIS/IIS/IIS.csproj
+++ b/IIS/IIS/IIS.csproj
@@ -14,4 +14,7 @@
   <ItemGroup>
     <None Remove=".DS_Store" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Humanizer" Version="2.6.2" />
+  </ItemGroup>
 </Project>
