--- a/IIS/IIS.Web/appsettings.Development.json
+++ b/IIS/IIS.Web/appsettings.Development.json
@@ -7,8 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    //"db": "Server=db;Database=postgres;Username=postgres;Password=;"
-    "db": "Server=db-02.contour.net;Database=contour_dev;Username=contour_api;Password=V88pC47s45;"
+    "db": "Server=db;Database=contour_dev;Username=postgres;Password=;"
   },
   "mq": {
     "host": "mq",
