ignore_malformed setting for es index. logging exceptions from es.

--- a/IIS/IIS.Web/appsettings.Staging.json
+++ b/IIS/IIS.Web/appsettings.Staging.json
@@ -6,7 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "db": "Server=db-02.contour.net;Database=contour_dev;Username=contour_api;Password=V88pC47s45;"
+    "db": "Server=ref-db-01.contour.net;Database=contour_dev;Username=postgres;Password=S1mpl3xTLS2709;"
   },
   "mq": {
     "host": "rmk-01.contour.net",
