--- a/IIS/docker-compose.yml
+++ b/IIS/docker-compose.yml
@@ -43,6 +43,11 @@ services:
     mq:
         container_name: iis.mq
         image: rabbitmq:latest
+        ports:
+            - 4369:4369
+            - 5671:5671
+            - 5672:5672
+            - 25672:25672
         networks:
             - iis-network
         volumes:
@@ -61,6 +66,7 @@ services:
             - ../data_storage/elasticsearch-data:/usr/share/elasticsearch/data
         ports:
             - 9200:9200
+            - 9300:9300
         networks:
             - iis-network
         restart: always
