--- a/IIS/IIS.Core/appsettings.Development.json
+++ b/IIS/IIS.Core/appsettings.Development.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "db": "Server=db;Database=contour_dev;Username=postgres;Password=;"
+    "db": "Server=db;Database=contour;Username=postgres;Password=;"
   },
   "mq": {
     "host": "mq",
