refactor(graphql): Scalars, Interfaces, LegacyProvider
Marked AttributeType.ScalarType as obsolete, created replacement enum for this property
Created GeoJsonScalar as free-form json, should add validation if needed. Implemented JsonScalarType.Serialize()
Implemented File Attribute type as non-scalar value
Included GeoJSON.NET library, used it for validation of GeoJsonScalar. No references to GeoJSON in ontology, anyway
Refactored ReadQueryCreator. Abstract types are now interfaces on GraphQL.
Extracted LegacyOntologyProvider from ReanimatorController, Entities and attributes work with builder, Relations missing

Relates IIS-3888

--- a/IIS/IIS.Core/IIS.Core.csproj
+++ b/IIS/IIS.Core/IIS.Core.csproj
@@ -12,6 +12,7 @@
     <LangVersion>7.1</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="GeoJSON.Net" Version="1.1.72" />
     <PackageReference Include="HotChocolate" Version="9.1.0-preview.24" />
     <PackageReference Include="HotChocolate.AspNetCore" Version="9.1.0-preview.24" />
     <PackageReference Include="HotChocolate.AspNetCore.Playground" Version="9.1.0-preview.24" />
