--- a/IIS/IIS.Core/appsettings.Development.json
+++ b/IIS/IIS.Core/appsettings.Development.json
@@ -7,10 +7,11 @@
     }
   },
   "ConnectionStrings": {
-    "db": "Server=db;Database=contour;Username=postgres;Password=;"
+    "db": "Server=db;Database=contour;Username=postgres;Password=;",
+    "db-legacy": "Server=db;Database=contour_dev;Username=postgres;Password=;"
   },
   "mq": {
-    "host": "mq",
+    "host": "localhost",
     "username": "guest",
     "password": "guest"
   },
