--- a/IIS/IIS.Core/IIS.Core.csproj
+++ b/IIS/IIS.Core/IIS.Core.csproj
@@ -28,8 +28,13 @@
     <Folder Include="Ontology\" />
     <Folder Include="Ontology.EntityFramework\" />
     <Folder Include="Ontology.EntityFramework\Context\" />
+    <Folder Include="Legacy\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\IIS\IIS.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="Legacy\OntologyRepository.cs" />
+    <Compile Remove="Legacy\SchemaRepository.cs" />
   </ItemGroup>
 </Project>
