--- a/IIS/IIS.Core/IIS.Core.csproj
+++ b/IIS/IIS.Core/IIS.Core.csproj
@@ -16,7 +16,10 @@
     <PackageReference Include="HotChocolate" Version="9.1.0-preview.35" />
     <PackageReference Include="HotChocolate.AspNetCore" Version="9.1.0-preview.24" />
     <PackageReference Include="HotChocolate.AspNetCore.Playground" Version="9.1.0-preview.24" />
-    <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.App">
+      <PrivateAssets Condition="'%(PackageReference.Version)' == ''">all</PrivateAssets>
+      <Publish Condition="'%(PackageReference.Version)' == ''">true</Publish>
+    </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="protobuf-net" Version="2.4.0" />
     <PackageReference Include="RabbitMQ.Client" Version="5.1.0" />
