--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,15 @@
 build:
   stage: build
-  only:
-    - master
+  
   script:
     - ls
-    - cd IIS && mv -f iis-api.net /home/gitlab-runner/
+    - mv -f IIS/iis-api.net /home/gitlab-runner/
     - cd /home/gitlab-runner/iis-api.net/IIS/
     - bash /home/gitlab-runner/sr.sh
     - export ASPNETCORE_ENVIRONMENT=Staging && dotnet publish IIS.Core/IIS.Core.csproj -o ../publish/web
+    
+  only:
+    - master
   
   
   tags:
