fix(server): Configurable endpoint
Quickfix for listening on all interfaces, not localhost
appsettings.json modified

Relates IIS-4101

--- a/IIS/IIS.Core/appsettings.json
+++ b/IIS/IIS.Core/appsettings.json
@@ -1,8 +1,18 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "Kestrel": {
+        "Endpoints": {
+            "Http": {
+                "Url": "http://*:5000"
+            },
+            "Https": {
+                "Url": "http://*:5001"
+            }
+        }
     }
-  },
-  "AllowedHosts": "*"
 }
