fix(server): Staging config modified - database name
Relates IIS-4101

--- a/IIS/IIS.Core/appsettings.Staging.json
+++ b/IIS/IIS.Core/appsettings.Staging.json
@@ -1,11 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "db": "Server=ref-db-01.contour.net;Database=contour_dev_net;Username=postgres;Password=S1mpl3xTLS2709;"
     }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "db": "Server=ref-db-01.contour.net;Database=contour_dev;Username=postgres;Password=S1mpl3xTLS2709;"
-  }
 }
