--- a/IIS/IIS.Core/appsettings.Staging.json
+++ b/IIS/IIS.Core/appsettings.Staging.json
@@ -6,6 +6,7 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "db": "Server=ref-db-01.contour.net;Database=contour_dev_net;Username=postgres;Password=S1mpl3xTLS2709;"
+        "db": "Server=ref-db-01.contour.net;Database=contour_dev_net;Username=postgres;Password=S1mpl3xTLS2709;",
+        "db-legacy": "Server=ref-db-01.contour.net;Database=contour_dev;Username=postgres;Password=S1mpl3xTLS2709;"
     }
 }
