chore(ci): separated build & deploy
IIS-3923

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,20 +1,26 @@
-build:
+stages:
+  - build
+  - deploy
+  
+build_job:
   stage: build
-  
   script:
+    - cd IIS/ && sh ./startup
     - ls
-    - rm -rf /home/gitlab-runner/iis-api.net
-    - mkdir /home/gitlab-runner/iis-api.net
-    - mv -f IIS /home/gitlab-runner/iis-api.net/
-    - cd /home/gitlab-runner/iis-api.net/IIS/
-    - dotnet publish IIS.Core/IIS.Core.csproj -o ../publish/web
-    #- bash /home/gitlab-runner/sr.sh
-    #- cd /home/gitlab-runner/iis-api.net/IIS/publish/web/ && export ASPNETCORE_ENVIRONMENT=Staging && dotnet IIS.Core.dll
-    - sudo systemctl restart supervisord
+  artifacts:
+    paths:
+    - IIS/publish
+    expire_in: 1 week
     
-  only:
-    - master
-  
-  
   tags:
-    - dev
+    - ci
+    
+deploy_dev:
+  stage: deploy
+  script:
+    - cd /home/gitlab-runner/ansible
+    - "ansible-playbook app_api_net_dev.yml --extra-vars \"HOST=contour-dev tag_name=$CI_COMMIT_REF_NAME job_name=build_job\""
+    
+  tags:
+    - ansible
+  only: master  
