feat(seed): seed reference data
Relates to IIS-4155

--- a/IIS/IIS.Core/IIS.Core.csproj
+++ b/IIS/IIS.Core/IIS.Core.csproj
@@ -41,4 +41,12 @@
     <Compile Remove="Legacy\OntologyRepository.cs" />
     <Compile Remove="Legacy\SchemaRepository.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Update="data\Corps.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="data\Country.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
