--- a/IIS/IIS.Core/IIS.Core.csproj
+++ b/IIS/IIS.Core/IIS.Core.csproj
@@ -12,6 +12,7 @@
     <LangVersion>7.1</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Flee" Version="1.2.2" />
     <PackageReference Include="GeoJSON.Net" Version="1.1.72" />
     <PackageReference Include="HotChocolate" Version="11.0.0-preview.2" />
     <PackageReference Include="HotChocolate.AspNetCore" Version="11.0.0-preview.2" />
