feat(gsm): implement gsm processing
Relates to IIS-4185

--- a/IIS/IIS.Core/appsettings.Development.json
+++ b/IIS/IIS.Core/appsettings.Development.json
@@ -11,7 +11,7 @@
     "db-legacy": "Server=db;Database=contour_dev;Username=postgres;Password=;"
   },
   "mq": {
-    "host": "localhost",
+    "host": "mq",
     "username": "guest",
     "password": "guest"
   },
