mq config updated

--- a/IIS/IIS.Core/appsettings.Staging.json
+++ b/IIS/IIS.Core/appsettings.Staging.json
@@ -10,8 +10,8 @@
         "db-legacy": "Server=ref-db-01.contour.net;Database=contour_dev;Username=postgres;Password=S1mpl3xTLS2709;"
     },
     "mq": {
-        "host": "localhost",
-        "username": "guest",
-        "password": "guest"
+        "host": "rmk-01.contour.net",
+        "username": "manager",
+        "password": "manager"
     }
 }
