feat(gsm): fixes and requesting ML
Relates to IIS-4185

--- a/IIS/IIS.Core/appsettings.Development.json
+++ b/IIS/IIS.Core/appsettings.Development.json
@@ -15,6 +15,7 @@
     "username": "guest",
     "password": "guest"
   },
+  "gsmWorkerUrl": "http://ml.contour.net:8000/transcribe",
   "es": {
     "host": "http://es:9200"
   }
