--- a/IIS/IIS.Core/appsettings.Staging.json
+++ b/IIS/IIS.Core/appsettings.Staging.json
@@ -13,5 +13,6 @@
         "host": "rmk-01.contour.net",
         "username": "manager",
         "password": "manager"
-    }
+    },
+    "gsmWorkerUrl": "http://ml.contour.net:8000/transcribe"
 }
