--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,31 +17,25 @@ build_job:
   only: 
     - master
     
-deploy_dev:
+.deploy:
   stage: deploy
   variables:
     GIT_STRATEGY: none
     GIT_CHECKOUT: "false"
-  script:
+  before_script:
     - cd /home/gitlab-runner/ansible
-    - ansible-playbook app_api_net_dev.yml --extra-vars "HOST=contour-dev tag_name=$CI_COMMIT_REF_NAME job_name=build_job"
-    
   tags:
     - ansible
   only: 
     - master  
+    
+deploy_dev:
+  extends: .deploy
+  script:
+    - ansible-playbook app_api_net_dev.yml --extra-vars "HOST=contour-dev tag_name=$CI_COMMIT_REF_NAME"
 
 deploy_od:
+  extends: .deploy
   stage: deploy
-  variables:
-    GIT_STRATEGY: none
-    GIT_CHECKOUT: "false"
   script:
-    - cd /home/gitlab-runner/ansible
-    - env
-    - "ansible-playbook app_api_net_dev_od.yml --extra-vars \"HOST=od-dev tag_name=$CI_COMMIT_REF_NAME job_name=build_job\""
-    
-  tags:
-    - ansible
-  only: 
-    - master  
+    - ansible-playbook app_api_net_dev_od.yml --extra-vars "HOST=od-dev tag_name=$CI_COMMIT_REF_NAME"
