--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ build_job:
     GIT_STRATEGY: none
     GIT_CHECKOUT: "false"
   before_script:
-    - ls
+    - PROJECT_PATH=$(pwd)
     - cd /home/gitlab-runner/ansible
   tags:
     - ansible
@@ -33,10 +33,10 @@ build_job:
 deploy_dev:
   extends: .deploy
   script:
-    - ansible-playbook app_api_net_dev.yml --extra-vars "HOST=contour-dev artifacts_path=."
+    - ansible-playbook app_api_net_dev.yml --extra-vars "HOST=contour-dev artifacts_path=$PROJECT_PATH"
 
 deploy_od:
   extends: .deploy
   stage: deploy
   script:
-    - ansible-playbook app_api_net_dev_od.yml --extra-vars "HOST=od-dev artifacts_path=."
+    - ansible-playbook app_api_net_dev_od.yml --extra-vars "HOST=od-dev artifacts_path=$PROJECT_PATH"
