--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,11 +31,6 @@ build_job:
     
 deploy_dev:
   extends: .deploy
-  script:
-    - ansible-playbook app_api_net_dev.yml --extra-vars "HOST=contour-dev artifacts_path=$CI_PROJECT_DIR"
-
-deploy_od:
-  extends: .deploy
   stage: deploy
   script:
-    - ansible-playbook app_api_net_dev_od.yml --extra-vars "HOST=od-dev artifacts_path=$CI_PROJECT_DIR"
+    - ansible-playbook app_api_net_dev.yml --extra-vars "HOST=envtest artifacts_path=$CI_PROJECT_DIR"
