fix(auth): fixes user login IIS-3977

--- a/IIS/IIS.Core/appsettings.json
+++ b/IIS/IIS.Core/appsettings.json
@@ -1,19 +1,27 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Warning"
-        }
-    },
-    "AllowedHosts": "*",
-    "Kestrel": {
-        "Endpoints": {
-            "Http": {
-                "Url": "http://*:5000"
-            },
-            "Https": {
-                "Url": "http://*:5001"
-            }
-        }
-    },
-    "useAuthentication": false
+  "Logging": {
+    "LogLevel": {
+      "Default": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://*:5000"
+      },
+      "Https": {
+        "Url": "http://*:5001"
+      }
+    }
+  },
+  "salt": "a}~QUU'H&}he\"42{",
+  "jwt": {
+    "issuer": "iis",
+    "audience": "client",
+    "signingKey": "L8DD$,m4>N!?N+s6-6Sb*dV~.\\RD%q'9T%s[A}NV'#K5",
+    "lifeTime": "00:20:00"
+  },
+  "defaultUserName": "olya",
+  "defaultPassword": "hammer69"
 }
