chore(ci) update .gitlab-ci.yml (regexp)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,8 +16,8 @@ build_job:
     - ci
   only: 
     - master
-    - v*
-    - sprint.*
+    - /^v*$/
+    - /^sprint.*$/
     
 .deploy:
   stage: deploy
