chore(ci) update .gitlab-ci.yml (fix deploy)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,8 @@ build_job:
     GIT_CHECKOUT: "false"
   script:
     - cd /home/gitlab-runner/ansible
-    - ansible-playbook app_api_net.yml --extra-vars "HOST=$DEPLOYMENT_HOST artifacts_path=$CI_PROJECT_DIR env_file=$ANSIBLE_ENV_FILE tag_name=$TAG_NAME"
+#    - ansible-playbook app_api_net.yml --extra-vars "HOST=$DEPLOYMENT_HOST artifacts_path=$CI_PROJECT_DIR env_file=$ANSIBLE_ENV_FILE tag_name=$TAG_NAME"
+    - ansible-playbook app_api_net.yml -e '@./$DEPLOYMENT_FILE'
     - rm -rf $CI_PROJECT_DIR/*
 
   tags:
@@ -37,8 +38,8 @@ build_job:
 deploy_dev:
   extends: .deploy
   variables:
-    DEPLOYMENT_HOST: contour-dev
-    ANSIBLE_ENV_FILE: web_dev
+    DEPLOYMENT_FILE: dev_con.yml
+    #ANSIBLE_ENV_FILE: web_dev
   environment:
     name: dev_contour
     url: http://contour-dev-01.contour.net
@@ -47,8 +48,8 @@ deploy_dev:
 deploy_od:
   extends: .deploy
   variables:
-    DEPLOYMENT_HOST: od-dev
-    ANSIBLE_ENV_FILE: web_dev_od
+    DEPLOYMENT_FILE: dev_od.yml
+    #ANSIBLE_ENV_FILE: web_dev_od
   environment:
     name: dev_odysseus
     url: http://od-dev.contour.net
