--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,7 @@ build_job:
   script:
     - cd /home/gitlab-runner/ansible
 #    - ansible-playbook app_api_net.yml --extra-vars "HOST=$DEPLOYMENT_HOST artifacts_path=$CI_PROJECT_DIR env_file=$ANSIBLE_ENV_FILE tag_name=$TAG_NAME"
-    - ansible-playbook app_api_net.yml -e '@./$DEPLOYMENT_FILE'
+    - ansible-playbook app_api_net.yml -e '@./vars/$DEPLOYMENT_FILE'
     - rm -rf $CI_PROJECT_DIR/*
 
   tags:
